Corrected $variable name

--- a/_meta.buttons.scss
+++ b/_meta.buttons.scss
@@ -6,7 +6,7 @@ $inuit-enable-btn--primary                          : true;
 $inuit-enable-btn--tertiary                         : true;
 $inuit-enable-btn--small                            : true;
 $inuit-enable-btn--large                            : true;
-$inuit-enable-btn--cta                              : true;
+$inuit-enable-btn--huge                             : true;
 $inuit-enable-btn--full                             : true;
 $inuit-enable-btn--icon                             : true;
 $inuit-enable-btn--bare                             : true;
