--- a/_meta.buttons.scss
+++ b/_meta.buttons.scss
@@ -12,5 +12,5 @@ $inuit-enable-btn--icon                             : true;
 $inuit-enable-btn--bare                             : true;
 $inuit-enable-btn--disabled                         : true;
 
-@import "../px-buttons-design/objects.buttons";
-@import "../px-button-group-design/objects.button-group";
+@import "px-buttons-design/_objects.buttons.scss";
+@import "px-button-group-design/_objects.button-group.scss";
