--- a/sass/px-meta-buttons-design-demo.scss
+++ b/sass/px-meta-buttons-design-demo.scss
@@ -33,6 +33,7 @@ PAGE. IT SHOULD NOT PROVIDE RULES FOR THE MODULE.
 @import "px-typography-design/_base.typography.scss";
 
 // Component
+$inuit-enable-btn--primary : true;
 @import "../_meta.buttons.scss";
 
 
